# opencv_native_androidstudio

./: .gitmodules  README.md
app/: CMakeLists.txt  build.gradle
app/signing/: test.jks
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/ch/hepia/iti/opencvnativeandroidstudio/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
